# op3_soccer_ws

devel/: .catkin  .rosinstall  setup.sh
devel/lib/op3_leo/: op3_leo  read_write
devel/lib/pkgconfig/: op3_leo.pc
devel/share/op3_leo/cmake/: op3_leoConfig.cmake
src/op3_leo/: CMakeLists.txt  package.xml
src/op3_leo/data/: Deg.txt  FDeg.txt  FLDeg.txt  Federico.txt  Pararse_caderas.txt  Sentarse.txt  TestDeg.txt  Trabadito.txt  Venustiano.txt  home
src/op3_leo/include/: actions.hpp  soccer.hpp
src/op3_leo/launch/: robot.launch  soccer.launch
src/op3_leo/src/: example.py  giro.cpp  read_write.cpp  tracking.cpp  walking_module.cpp
